--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
@@ -7,8 +7,6 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ..:/workspace:cached
-      - /workspace/vendor
-      - /workspace/node_modules
     command: sleep infinity
     environment:
       - DB_CONNECTION=pgsql
@@ -21,6 +19,7 @@ services:
       - postgres
     ports:
       - "8000:80"
+    user: "1000:1000"
 
   postgres:
     image: postgres:17
